--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@excalidraw/excalidraw": "^0.17.6",
+    "@reduxjs/toolkit": "^2.2.7",
     "file-saver": "^2.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
