--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "file-saver": "^2.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-scripts": "^5.0.1"
   },
